--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 @import "~animate.css/animate.min.css";
 @import "~jquery-smarttab/dist/css/smart_tab_all.min.css";
 @import "~jquery-smarttab/dist/css/smart_tab.min.css";
-@import "assets/css/style.css";
+@import "assets/css/style.min.css";
 
 @-webkit-keyframes fadeInRight {
     0% {
