sync: Implementing decision branchs

--- a/src/app/components/main/canvas/canvas.component.scss
+++ b/src/app/components/main/canvas/canvas.component.scss
@@ -123,3 +123,7 @@ mwlResizable {
 input::placeholder {
     color: #cccccc;
 }
+.no-h-padding {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
